# RenderEngine

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-and-release.yaml  test_workflow.yaml
src/: README.md  lib.rs  main.rs  math.rs  object.rs  position.rs  shader.wgsl  ui.rs  ui_example.rs  wgpu_handler.rs
src/ds/: aabb.rs  color.rs  hit_record.rs  interval.rs  mod.rs  ray.rs  vector3.rs
src/material/: absorb.rs  debug.rs  material_interface.rs  mirror.rs  mod.rs  molly.rs  static_color.rs  translucent.rs  unified.rs
src/object/: Camera.rs  Cube.rs  Square.rs  Triangle.rs  camera.rs  hittable.rs  mod.rs  player.rs  quad.rs  renderable.rs  sphere.rs
src/position/: Angle.rs  Rotation.rs  Vector3.rs  math.rs  mod.rs  ray.rs  vector3.rs
src/shaders/: intersection.wgsl  main.wgsl  material.wgsl  types.wgsl
src/ui/: anchor.rs  image.rs  mod.rs  ui_element.rs
