[package]
name = "RenderEngine"
version = "1.93.0"
edition = "2024"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
minifb = "0.28.0"
pixels = "0.13.0"
softbuffer = "0.4.8"
winit = "0.30.12"

[profile.release]
debug = true
