[package]
name = "RenderEngine"
version = "1.93.0"
edition = "2024"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
bytemuck = "1.25.0"
downcast-rs = "2.0.2"
pollster = "0.4.0"
rand = "0.10.0"
softbuffer = "0.4.8"
wgpu = "29.0.0"
winit = "0.30.12"

[profile.release]
debug = true
