[package]
name = "RenderEngine"
description = "A GPU ray tracing render engine"
version = "1.93.0"
edition = "2024"
resolver = "2"

license = "GPL-3.0"
repository = "https://github.com/prushton2/RenderEngine"

# Include the shaders
include = [
    "src/**/*",
    "Cargo.toml",
]

[dependencies]
auto_ops = "0.3.0"
bytemuck = "1.25.0"
clap = { version = "4.6.0", features = ["derive"] }
downcast-rs = "2.0.2"
env_logger = "0.11.9"
image = "0.25.10"
pollster = "0.4.0"
rand = "0.10.0"
softbuffer = "0.4.8"
wgpu = "24.0.0"
winit = "0.30.12"

[profile.release]
debug = true

[lib]
name = "render_engine"
path = "src/lib.rs"

[[bin]]
name = "RenderEngine"
path = "src/main.rs"